# dedalus-labs-proxy

./: .dockerignore  .gitignore  AGENTS.md  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: GOOGLE_TOOL_CALLING_BUG.md  api-overview.md  architecture.md  opencode-integration.md
src/dedalus_labs_proxy/: __init__.py  cli.py  config.py  logging.py  main.py
src/dedalus_labs_proxy/models/: __init__.py  requests.py  responses.py
src/dedalus_labs_proxy/routes/: __init__.py  chat.py  health.py  models.py
src/dedalus_labs_proxy/services/: __init__.py  dedalus.py
tests/: __init__.py  test_chat.py  test_health.py  test_models.py  test_validation.py
